--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="col-md-4 py-3 py-md-0">
                 
                 <div class="card">
-                    <i class="fa-solid fa-landmark"></i>
+                    <i class="fa-solid fa-circle-info"></i>
                     <div class="card-body">
                         <h3>Pengertian Museum</h3>
                         <p>Museum adalah lembaga yang berfungsi melindungi, mengembangkan, memanfaatkan koleksi, dan mengomunikasikannya kepada masyarakat.</p>
@@ -156,7 +156,7 @@
             <div class="col-md-4 py-3 py-md-0">
                 
                 <div class="card">
-                    <i class="fas fa-utensils"></i>
+                    <i class="fa-solid fa-question"></i>
                     <div class="card-body">
                         <h3>Visi</h3>
                         <p>Terwujudnya museum terlengkap partisipatif berbasis kearifan lokal yang berkelanjutan</p>
